--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="contact__container bd-grid">
                 <form method="POST" action="https://formsubmit.co/d8c08cd8faec10fc3a3c3001b362d6b7" class="contact__form">
 
-                    <input type="hidden" name="_next" value="./success.html">
+                    <input type="hidden" name="_next" value="https://killflex.github.io/success.html">
                     <input type="text" name="_honey" style="display:none">
                     <input type="hidden" name="_captcha" value="false">
 
