--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <input type="email" placeholder="Email" name="Email" class="contact__input" required>
                     <textarea name="textarea" id="" cols="0" rows="10" name="Messages" class="contact__input txt-area" placeholder="Your message" required></textarea>
 
-                    <button type="submit" name="submit" class="contact__button" onlick><i class='bx bxs-send'></i></button>
+                    <button type="submit" class="contact__button" onlick><i class='bx bxs-send'></i></button>
                 </form>
             </div>
         </section>
