--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                     <input type="text" placeholder="Name" name="Name" class="contact__input" required>
                     <input type="email" placeholder="Email" name="Email" class="contact__input" required>
-                    <textarea name="textarea" id="" cols="0" rows="10" name="Messages" class="contact__input txt-area" placeholder="Your message" required></textarea>
+                    <textarea id="" cols="0" rows="10" name="Messages" class="contact__input txt-area" placeholder="Your message" required></textarea>
 
                     <button type="submit" class="contact__button" onlick><i class='bx bxs-send'></i></button>
                 </form>
