--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.instagram.com/killurflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/flexsify" target="_blank" class="home__social-icon"><i class='bx bxl-facebook-square'></i></a>
                 <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="home__social-icon"><i class='bx bxl-youtube'></i></a>
-                <a href="https://linktr.ee/7flexsfy" target="_blank" class="home__social-icon"><i class='bx bx-link-alt'></i></a>
+                <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
+                <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="jam:fiverr"></span></a>
+                <a href="https://linktr.ee/7flexsfy" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
             </div>
 
             <div class="home__img">    
@@ -344,22 +345,24 @@
 
     <!-- footer -->
     <footer class="footer">
-        <p class="footer__title">SOCIAL MEDIA</p>
+        <!-- <p class="footer__title">SOCIAL MEDIA</p> -->
 
         <div class="footer__socials">
             <a href="https://www.instagram.com/killflex" target="_blank" class="footer__icon"><i class='bx bxl-instagram-alt'></i></a>
             <a href="https://twitter.com/fleksipi" target="_blank" class="footer__icon"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class='bx bxl-facebook-square'></i></a>
             <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a>
-            <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon"><i class='bx bx-link-alt'></i></a>
+            <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
+            <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="jam:fiverr"></span></a>
+            <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
         </div>
 
-        <p class="footer__email">killflexediting@gmail.com</p>
+        <p class="footer__email">   </p>
 
         <p class="footer__cpy">Copyright &#169; 2021 killflex. All Rights Reserved</p>
     </footer>
     <!-- /footer -->
     <script src="./assets/library/lightbox2-dev/dist/js/lightbox-plus-jquery.js"></script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <script>
         lightbox.option({
             'alwaysShowNavOnTouchDevices': true,
