--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./assets/library/lightbox2-dev/dist/css/lightbox.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="shortcut icon" type="image" href="./assets/img/favicon2.png">
+    <!-- <link rel="shortcut icon" type="image" href="./assets/img/favicon2.png"> -->
+    <link rel="shortcut icon" type="image" href="https://encrypted-tbn3.gstatic.com/favicon-tbn?q=tbn:ANd9GcQTJU8h7787Bm3hkhYh-yxu7C3oLc-8uBknyS8X6jw8ze_U2kQv7o3hTk5a6cubcBrP0-eXDzYnP5dEv2o">
 </head>
 <body>
     <!-- header -->
