--- a/success.html
+++ b/success.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/success.css">
+    <link rel="shortcut icon" type="image" href="https://encrypted-tbn3.gstatic.com/favicon-tbn?q=tbn:ANd9GcQTJU8h7787Bm3hkhYh-yxu7C3oLc-8uBknyS8X6jw8ze_U2kQv7o3hTk5a6cubcBrP0-eXDzYnP5dEv2o">
+
 </head>
 
 <body>
