--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="home__social-icon"><i class='bx bxl-youtube'></i></a>
+                <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="fa-brands fa-facebook fa-xs"></i></a>
                 <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
-                <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="jam:fiverr"></span></a>
+                <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="home__social-icon"><i class='bx bxl-youtube'></i></a>
+                <!-- <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="jam:fiverr"></span></a> -->
                 <a href="https://linktr.ee/7flexsfy" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
             </div>
 
@@ -351,9 +352,11 @@
         <div class="footer__socials">
             <a href="https://www.instagram.com/killflex" target="_blank" class="footer__icon"><i class='bx bxl-instagram-alt'></i></a>
             <a href="https://twitter.com/fleksipi" target="_blank" class="footer__icon"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a>
+            <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="fa-brands fa-facebook fa-xs"></i></a>
             <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
-            <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="jam:fiverr"></span></a>
+            <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a>
+
+            <!-- <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="jam:fiverr"></span></a> -->
             <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
         </div>
 
