--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link active"><i class="fas fa-home nav__icon"></i> Home</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link"><i class="fas fa-home nav__icon"></i> Home</a></li>
+                    <!-- <li class="nav__item"><a href="#home" class="nav__link active"><i class="fas fa-home nav__icon"></i> Home</a></li> -->
                     <li class="nav__item"><a href="#about" class="nav__link"><i class="fas fa-user nav__icon"></i> About</a></li>
                     <!-- <li class="nav__item"><a href="#skills" class="nav__link"><i class="fas fa-clipboard-list nav__icon"></i> Skills</a></li> -->
                     <li class="nav__item"><a href="#works" class="nav__link"><i class="fas fa-image nav__icon"></i> Works</a></li>
@@ -58,11 +59,9 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="fa-brands fa-facebook fa-xs"></i></a>
-                <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
-                <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="home__social-icon"><i class='bx bxl-youtube'></i></a>
-                <!-- <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="jam:fiverr"></span></a> -->
-                <a href="https://linktr.ee/7flexsfy" target="_blank" class="home__social-icon" style="font-size: 22px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
+                <a href="https://www.facebook.com/flexsify" target="_blank" class="home__social-icon"><i
+                        class='bx bxl-facebook-square'></i></a>
+                <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
             </div>
 
             <div class="home__img">    
@@ -77,20 +76,20 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/itsme.jpg" alt="killflex face">
+                    <img src="assets/img/itsme2.jpg" alt="killflex face">
                 </div>
                 
                 <div>
                     <h2 class="about__subtitle">Hi there!</h1>
                     <p class="about__text">Welcome to my portfolio! My name is Ferry Hasan, known as killflex or fleksipi. I'm 18 years old based in Surabaya, East
-                    Java, Indonesia. I have more than 3 years experience as a <b>Motion Designer</b> &
-                    almost 1 years as a <b>3D Designer</b>.
+                    Java, Indonesia. I have more than 4 years experience as a Motion Designer &
+                    almost 2 years as a 3D Designer.
                     <br><br>
-                    It started from my hobby that loves to play games, watch animation, and also everything involved in design. I have the
-                    desire to make it by myself. In the end I started learning 2D and 3D design from various software such as <b>Adobe After
-                    Effects</b>, <b>Photoshop</b>, <b>Cinema 4D</b>, <b>Blender</b>, and so on.
+                    It started from my hobby that loves to play games, watch cartoon animation, and also everything involved in design. I have the
+                    desire to make it by myself. In the end I started learning 2D and 3D design from various software such as Adobe After
+                    Effects, Photoshop, Cinema 4D, ,Blender, and so on.
                     <br><br>
-                    Doing 3D & Motion <b>isn't just hobby</b> for me, but it also my <b>biggest passion</b>.</p>  
+                    Doing 3D & Motion isn't just hobby for me, but it also my biggest passion.</p>  
                 </div>                                   
             </div>
         </section>
@@ -195,37 +194,43 @@
             <h3 class="visuals__subs bd-grid">3D Illustration</h3>
             <div class="visuals__container bd-grid">
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work4.jpg" data-lightbox="technology" data-title="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold">
+                    <a href="assets/img/visuals/work4.jpg" data-lightbox="technology"
+                        data-title="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                         <img src="assets/img/visuals/work4.jpg" alt="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work5.jpg" data-lightbox="technology" data-title="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold">
+                    <a href="assets/img/visuals/work5.jpg" data-lightbox="technology"
+                        data-title="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                         <img src="assets/img/visuals/work5.jpg" alt="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work6.jpg" data-lightbox="technology" data-title="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold">
+                    <a href="assets/img/visuals/work6.jpg" data-lightbox="technology"
+                        data-title="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                         <img src="assets/img/visuals/work6.jpg" alt="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work1.jpg" data-lightbox="technology" data-title="TAKE OUT ✦ Blender ✦ Octane ✦">
+                    <a href="assets/img/visuals/work1.jpg" data-lightbox="technology"
+                        data-title="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects">
                         <img src="assets/img/visuals/work1.jpg" alt="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work2.jpg" data-lightbox="technology" data-title="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After">
+                    <a href="assets/img/visuals/work2.jpg" data-lightbox="technology"
+                        data-title="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects">
                         <img src="assets/img/visuals/work2.jpg" alt="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work3.jpg" data-lightbox="technology" data-title="NOBODY ✦ Blender ✦ Octane ✦ Adobe After"> 
+                    <a href="assets/img/visuals/work3.jpg" data-lightbox="technology"
+                        data-title="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects">
                         <img src="assets/img/visuals/work3.jpg" alt="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work7.jpg" data-lightbox="technology" data-title="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop"">
+                    <a href="assets/img/visuals/work7.jpg" data-lightbox="technology" data-title="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop">
                         <img src="assets/img/visuals/work7.jpg" alt="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop">
                     </a>
                 </div>
@@ -352,12 +357,12 @@
         <div class="footer__socials">
             <a href="https://www.instagram.com/killflex" target="_blank" class="footer__icon"><i class='bx bxl-instagram-alt'></i></a>
             <a href="https://twitter.com/fleksipi" target="_blank" class="footer__icon"><i class='bx bxl-twitter'></i></a>
-            <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="fa-brands fa-facebook fa-xs"></i></a>
-            <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a>
-            <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a>
+            <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="bx bxl-facebook-square"></i></a>
+            <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
+            <!-- <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a> -->
 
             <!-- <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="jam:fiverr"></span></a> -->
-            <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a>
+            <!-- <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a> -->
         </div>
 
         <p class="footer__email">   </p>
