--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/flexsify" target="_blank" class="home__social-icon"><i
-                        class='bx bxl-facebook-square'></i></a>
+                <a href="https://www.facebook.com/flexsify" target="_blank" class="home__social-icon"><i class='bx bxl-facebook-square'></i></a>
+                <a href="mailto:killflexediting@gmail.com" target="_parent" class="home__social-icon"><i class='bx bxs-envelope'></i></a>
                 <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
             </div>
 
@@ -191,7 +191,7 @@
         <section class="visuals section" id="works">
             <h2 class="section-title">Works</h2>
 
-            <h3 class="visuals__subs bd-grid">3D Illustration</h3>
+            <h3 class="visuals__subs bd-grid">3D Art and Illustration</h3>
             <div class="visuals__container bd-grid">
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work4.jpg" data-lightbox="technology"
@@ -358,6 +358,7 @@
             <a href="https://www.instagram.com/killflex" target="_blank" class="footer__icon"><i class='bx bxl-instagram-alt'></i></a>
             <a href="https://twitter.com/fleksipi" target="_blank" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="bx bxl-facebook-square"></i></a>
+            <a href="mailto:killflexediting@gmail.com" target="_parent" class="footer__icon"><i class='bx bxs-envelope'></i></a>
             <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
             <!-- <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a> -->
 
@@ -365,7 +366,7 @@
             <!-- <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a> -->
         </div>
 
-        <p class="footer__email">   </p>
+        <p class="footer__email"></p>
 
         <p class="footer__cpy">Copyright &#169; 2021 killflex. All Rights Reserved</p>
     </footer>
