--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./assets/library/lightbox2-dev/dist/css/lightbox.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- <link rel="shortcut icon" type="image" href="./assets/img/favicon2.png"> -->
-    <link rel="shortcut icon" type="image" href="https://encrypted-tbn3.gstatic.com/favicon-tbn?q=tbn:ANd9GcQTJU8h7787Bm3hkhYh-yxu7C3oLc-8uBknyS8X6jw8ze_U2kQv7o3hTk5a6cubcBrP0-eXDzYnP5dEv2o">
+    <link rel="shortcut icon" type="image" href="./assets/img/favicon2.png">
+    <!-- <link rel="shortcut icon" type="image" href="https://encrypted-tbn3.gstatic.com/favicon-tbn?q=tbn:ANd9GcQTJU8h7787Bm3hkhYh-yxu7C3oLc-8uBknyS8X6jw8ze_U2kQv7o3hTk5a6cubcBrP0-eXDzYnP5dEv2o"> -->
 </head>
 <body>
     <!-- header -->
@@ -51,7 +51,7 @@
                 <p class="home__title-hello">Hello!</p>
                 <h1 class="home__title">I'm <span class="home__title-color">killflex</span></h1>
 
-                <p class="home__title-jabat"><span class="home__title-color">3D & Motion Designer &#174;</span></p>
+                <p class="home__title-jabat"><span class="home__title-color">3D Motion Graphic Designer &#174;</span></p>
 
                 <a href="#contact" class="button">Contact</a>
             </div>
@@ -59,8 +59,9 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/flexsify" target="_blank" class="home__social-icon"><i class='bx bxl-facebook-square'></i></a>
+                <a href="https://www.behance.net/killflex" target="_blank" class="home__social-icon"><i class='bx-fw bx bxl-behance'></i></a>
                 <a href="mailto:killflexediting@gmail.com" target="_parent" class="home__social-icon"><i class='bx bxs-envelope'></i></a>
+                <a href="https://linktr.ee/killflex" target="_blank" class="home__social-icon"><i class='bx bx-link'></i></a>
                 <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
             </div>
 
@@ -81,15 +82,16 @@
                 
                 <div>
                     <h2 class="about__subtitle">Hi there!</h1>
-                    <p class="about__text">Welcome to my portfolio! My name is Ferry Hasan, known as killflex or fleksipi. I'm 18 years old based in Surabaya, East
-                    Java, Indonesia. I have more than 4 years experience as a Motion Designer &
-                    almost 2 years as a 3D Designer.
+                    <p class="about__text">Welcome to my portfolio! My name is Ferry Hasan, known as killflex. I'm 18
+                        years old based in Surabaya, Indonesia. I have more than 4 years experience as a Motion Graphic
+                        Designer & almost 2 years as a 3D Artist.
                     <br><br>
-                    It started from my hobby that loves to play games, watch cartoon animation, and also everything involved in design. I have the
-                    desire to make it by myself. In the end I started learning 2D and 3D design from various software such as Adobe After
-                    Effects, Photoshop, Cinema 4D, ,Blender, and so on.
+                    It started from my hobby that loves to play games, watching cartoon animation, and also everything
+                    involved in design. I have the desire to make it by myself. In the end I started learning 2D and 3D
+                    design from various software such as Adobe After Effects, Photoshop, Illustrator, Cinema 4D,
+                    ,Blender, and so on.
                     <br><br>
-                    Doing 3D & Motion isn't just hobby for me, but it also my biggest passion.</p>  
+                    Doing 3D & Motion Graphic isn't just hobby for me, but it also my biggest passion.</p>
                 </div>                                   
             </div>
         </section>
@@ -195,68 +197,68 @@
             <div class="visuals__container bd-grid">
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work4.jpg" data-lightbox="technology"
-                        data-title="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
-                        <img src="assets/img/visuals/work4.jpg" alt="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
+                        data-title="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop (Personal)">
+                        <img src="assets/img/visuals/work4.jpg" alt="Nobita Room v1 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work5.jpg" data-lightbox="technology"
-                        data-title="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
-                        <img src="assets/img/visuals/work5.jpg" alt="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
+                        data-title="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop  (Personal)">
+                        <img src="assets/img/visuals/work5.jpg" alt="Nobita Room v2 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work6.jpg" data-lightbox="technology"
-                        data-title="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
-                        <img src="assets/img/visuals/work6.jpg" alt="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop">
+                        data-title="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop  (Personal)">
+                        <img src="assets/img/visuals/work6.jpg" alt="Nobita Room v3 ✦ Blender ✦ Cinema 4D ✦ Arnold ✦ Adobe Photoshop  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work1.jpg" data-lightbox="technology"
-                        data-title="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work1.jpg" alt="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects">
+                        data-title="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work1.jpg" alt="TAKE OUT ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work2.jpg" data-lightbox="technology"
-                        data-title="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work2.jpg" alt="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects">
+                        data-title="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work2.jpg" alt="CLOUDY TRAIN ✦ Blender ✦ Cycles ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
                     <a href="assets/img/visuals/work3.jpg" data-lightbox="technology"
-                        data-title="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work3.jpg" alt="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects">
+                        data-title="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work3.jpg" alt="NOBODY ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work7.jpg" data-lightbox="technology" data-title="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop">
-                        <img src="assets/img/visuals/work7.jpg" alt="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop">
+                    <a href="assets/img/visuals/work7.jpg" data-lightbox="technology" data-title="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop  (Personal)">
+                        <img src="assets/img/visuals/work7.jpg" alt="NIKEAIRMAX ✦ Blender ✦ Cycles ✦ Adobe Photoshop  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work8.jpg" data-lightbox="technology" data-title="Ape's Sculpting ✦ Zbrush ✦ base model from Daz3D">
-                        <img src="assets/img/visuals/work8.jpg" alt="Ape's Sculpting ✦ Zbrush ✦ base model from Daz3D">
+                    <a href="assets/img/visuals/work8.jpg" data-lightbox="technology" data-title="Ape's Sculpting ✦ Zbrush ✦ base model from Daz3D (Commission)">
+                        <img src="assets/img/visuals/work8.jpg" alt="Ape's Sculpting ✦ Zbrush ✦ base model from Daz3D (Commission)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work9.jpg" data-lightbox="technology" data-title="Dual Sense ✦ Blender ✦ Cycles ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work9.jpg" alt="Dual Sense ✦ Blender ✦ Cycles ✦ Adobe After Effects">
+                    <a href="assets/img/visuals/work9.jpg" data-lightbox="technology" data-title="Dual Sense ✦ Blender ✦ Cycles ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work9.jpg" alt="Dual Sense ✦ Blender ✦ Cycles ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work14.jpg" data-lightbox="technology" data-title="FALLIN ✦ Blender ✦ Octane ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work14.jpg" alt="FALLIN ✦ Blender ✦ Octane ✦ Adobe After Effects">
+                    <a href="assets/img/visuals/work14.jpg" data-lightbox="technology" data-title="FALLIN ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work14.jpg" alt="FALLIN ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work11.jpg" data-lightbox="technology" data-title="i'm_still_waiting ✦ Blender ✦ Octane ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work11.jpg" alt="i'm_still_waiting ✦ Blender ✦ Octane ✦ Adobe After Effects">
+                    <a href="assets/img/visuals/work11.jpg" data-lightbox="technology" data-title="i'm_still_waiting ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work11.jpg" alt="i'm_still_waiting ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
                 <div class="visuals__img">
-                    <a href="assets/img/visuals/work12.jpg" data-lightbox="technology" data-title="Spooky ✦ Blender ✦ Octane ✦ Adobe After Effects">
-                        <img src="assets/img/visuals/work12.jpg" alt="Spooky ✦ Blender ✦ Octane ✦ Adobe After Effects">
+                    <a href="assets/img/visuals/work12.jpg" data-lightbox="technology" data-title="Spooky ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
+                        <img src="assets/img/visuals/work12.jpg" alt="Spooky ✦ Blender ✦ Octane ✦ Adobe After Effects  (Personal)">
                     </a>
                 </div>
             </div>
