simply footer title and github anchor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="index.html" class="nav__logo">killflex</a>
+                <a href="" class="nav__logo">killflex</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -59,10 +59,8 @@
             <div class="home__social">
                 <a href="https://www.instagram.com/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://twitter.com/fleksipi" target="_blank" class="home__social-icon"><i class='bx bxl-twitter'></i></a>
-                <!-- <a href="https://facebook.com/flexsify" target="_blank" class="home__social-icon"><i class='bx bxl-facebook-square'></i></a> -->
-                <a href="https://www.behance.net/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-behance' style="font-size: 1.62rem;"></i></a>
-                <a href="https://linktr.ee/killflex" target="_blank" class="home__social-icon"><i class='bx bxs-layer' style="font-size: 1.3rem;"></i></a>
-                <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="home__social-icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
+                <a href="https://github/killflex" target="_blank" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://linktr.ee/killflex" target="_blank" class="home__social-icon"><i class='bx bxs-layer'></i></a>
             </div>
 
             <div class="home__img">    
@@ -77,7 +75,7 @@
 
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/itsme2.jpg" alt="killflex face">
+                    <img src="assets/img/itsme3.jpg" alt="killflex face">
                 </div>
                 
                 <div>
@@ -354,7 +352,7 @@
 
     <!-- footer -->
     <footer class="footer">
-        <p class="footer__title">contact me in</p>
+        <p class="footer__title">connect with me</p>
 
         <div class="footer__socials">
             <a href="https://www.instagram.com/killflex" target="_blank" class="footer__icon"><i class='bx bxl-instagram-alt'></i></a>
@@ -362,11 +360,6 @@
             <a href="https://www.facebook.com/flexsify" target="_blank" class="footer__icon"><i class="bx bxl-facebook-square"></i></a>
             <a href="https://www.linkedin.com/in/ferry-hasan-4988b8242" target="_blank" class="footer__icon"><i class="bx bxl-linkedin-square"></i></a>
             <a href="mailto:killflexediting@gmail.com" target="_parent" class="footer__icon"><i class='bx bxs-envelope'></i></a>
-            <!-- <a href="https://www.artstation.com/killflex" target="_blank" class="footer__icon"><i class="fa-brands fa-artstation fa-xs"></i></a> -->
-            <!-- <a href="https://www.youtube.com/channel/UChwSCygEMrr2Ucip-yg2elg" target="_blank" class="footer__icon"><i class='bx bxl-youtube'></i></a> -->
-
-            <!-- <a href="https://www.fiverr.com/ferryhasan" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="jam:fiverr"></span></a> -->
-            <!-- <a href="https://linktr.ee/7flexsfy" target="_blank" class="footer__icon" style="font-size: 18px;"><span class="iconify" data-icon="simple-icons:linktree"></span></a> -->
         </div>
 
         <p class="footer__email"></p>
